[package]
name = "smartgrid-diag"
version = "0.1.0"
edition = "2021"

[features]
default = []
capture = ["pcap"]

[dependencies]
pcap = { version = "2", optional = true }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
thiserror = "2"
